quicklog/tests/failures/expr_without_name_2.stderr
error: expected identifier; expressions or non-identifiers must be accompanied by a name, e.g. info!(some_expr = &x, ...)
 --> tests/failures/expr_without_name_2.rs:8:11
  |
8 |     info!(&x);
  |           ^^
